--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "nodemailer-shared": "1.1.0",
     "nodemailer-wellknown": "0.1.10",
-    "smtp-connection": "4.0.2"
+    "smtp-connection": "https://github.com/ratriches/smtp-connection.git"
   },
   "devDependencies": {
     "chai": "^3.5.0",
